#include(${ArduinoCode_SOURCE_DIR}/arduino_diecimila_crosscompile.cmake)

add_library (u8g
utility/u8g_dev_st7565_lm6059.c
utility/u8g_com_atmega_hw_spi.c
utility/u8g_com_api.c
utility/u8g_com_arduino_st7920_spi.c
utility/u8g_pbxh16.c
utility/u8g_pb16v2.c
utility/u8g_dev_uc1701_dogs102.c
utility/u8g_u8toa.c
utility/u8g_dev_ssd1306_128x64.c
utility/u8g_line.c
utility/u8g_dev_st7920_128x64.c
utility/u8g_pb16h1.c
utility/u8g_dev_uc1601_c128032.c
utility/u8g_pb16v1.c
utility/u8g_com_atmega_sw_spi.c
utility/u8g_dev_sbn1661_122x32.c
utility/u8g_rect.c
utility/u8g_dev_ssd1325_nhd27oled_gr.c
utility/u8g_dev_st7920_202x32.c
utility/u8g_virtual_screen.c
utility/u8g_pb32h1.c
utility/u8g_dev_ssd1309_128x64.c
utility/u8g_rot.c
utility/u8g_com_arduino_common.c
utility/u8g_com_arduino_st7920_custom.c
utility/u8g_dev_st7565_dogm132.c
utility/u8g_dev_ssd1351_128x128.c
utility/u8g_pb8h1.c
utility/u8g_com_arduino_st7920_hw_spi.c
utility/u8g_cursor.c
utility/u8g_com_arduino_ssd_i2c.c
utility/u8g_dev_t6963_128x64.c
utility/u8g_dev_ks0108_128x64.c
utility/u8g_dev_null.c
utility/u8g_u16toa.c
utility/u8g_dev_pcd8544_84x48.c
utility/u8g_dev_ssd1306_128x32.c
utility/u8g_delay.c
utility/u8g_dev_gprof.c
utility/u8g_dev_t6963_240x128.c
utility/u8g_com_atmega_st7920_spi.c
utility/u8g_dev_ili9325d_320x240.c
utility/u8g_com_arduino_attiny85_hw_spi.c
utility/chessengine.c
utility/u8g_com_atmega_st7920_hw_spi.c
utility/u8g_pb8v1.c
utility/u8g_com_i2c.c
utility/u8g_dev_lc7981_320x64.c
utility/u8g_dev_ssd1325_nhd27oled_bw_new.c
utility/u8g_com_arduino_hw_usart_spi.c
utility/u8g_pb14v1.c
utility/u8g_dev_st7565_dogm128.c
utility/u8g_ll_api.c
utility/u8g_pb8h1f.c
utility/u8g_dev_ssd1325_nhd27oled_bw.c
utility/u8g_dev_ssd1322_nhd31oled_bw.c
utility/u8g_font_data.c
utility/u8g_dev_t6963_240x64.c
utility/u8g_dev_st7687_c144mvgd.c
utility/u8g_pb8v2.c
utility/u8g_font.c
utility/u8g_pb8h8.c
utility/u8g_com_atmega_parallel.c
utility/u8g_dev_lc7981_240x64.c
utility/u8g_pb16h2.c
utility/u8g_dev_a2_micro_printer.c
utility/u8g_dev_ht1632.c
utility/u8g_pb.c
utility/u8g_bitmap.c
utility/u8g_dev_pcf8812_96x65.c
utility/u8g_com_arduino_sw_spi.c
utility/u8g_dev_ssd1325_nhd27oled_gr_new.c
utility/u8g_state.c
utility/u8g_ellipse.c
utility/u8g_dev_st7565_nhd_c12864.c
utility/u8g_dev_ssd1322_nhd31oled_gr.c
utility/u8g_com_api_16gr.c
utility/u8g_com_arduino_std_sw_spi.c
utility/u8g_dev_uc1701_mini12864.c
utility/u8g_dev_lc7981_160x80.c
utility/u8g_page.c
utility/u8g_com_arduino_port_d_wr.c
utility/u8g_com_null.c
utility/u8g_com_arduino_no_en_parallel.c
utility/u8g_dev_st7565_64128n.c
utility/u8g_dev_uc1610_dogxl160.c
utility/u8g_pb8h2.c
utility/u8g_dev_flipdisc_2x7.c
utility/u8g_com_io.c
utility/u8g_dev_ssd1327_96x96_gr.c
utility/u8g_scale.c
utility/u8g_dev_st7565_lm6063.c
utility/u8g_com_arduino_fast_parallel.c
utility/u8g_dev_tls8204_84x48.c
utility/u8g_dev_lc7981_240x128.c
utility/u8g_com_arduino_hw_spi.c
utility/u8g_dev_st7920_192x32.c
utility/u8g_com_arduino_t6963.c
utility/u8g_pbxh24.c
utility/u8g_clip.c
utility/u8g_com_arduino_parallel.c
utility/u8g_circle.c
utility/u8g_dev_st7565_nhd_c12832.c
U8glib.cpp
)
